--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,19 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+p {
+  margin-left: 5px;
+}
+
+
