--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,10 +38,14 @@ p {
   margin-bottom: 16px;
 }
 
-.country-finder {
+.country-list {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+p {
+  margin: 0px;
 }
