--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -68,7 +68,7 @@ p {
   align-items: center;
 
   padding: 10px 15px;
-  border: 1px solod #000;
+  border: 1px solid #000;
   border-radius: 10px;
 
   width: 350px;
